<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:windowSoftInputMode="adjustNothing"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".85"
        android:background="@drawable/lily"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <fragment
        android:id="@+id/map"
        android:windowSoftInputMode="adjustNothing"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_link_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchBar"
        style="@style/MaterialSearchBarLight"
        android:windowSoftInputMode="adjustNothing"

        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="5dp"
        android:outlineProvider="bounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/map"
        app:mt_hint="Search for a specific location"
        app:mt_maxSuggestionsCount="10"
        app:mt_navIconEnabled="true"
        app:mt_speechMode="false" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="348dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/findLocation"
        android:textColor="#000000"
        android:textSize="15sp"
        app:fontFamily="@font/amiri"
        app:layout_constraintBottom_toTopOf="@+id/searchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_link_1"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="#A18BC34A"
        android:text="@string/link1"
        app:layout_constraintBottom_toTopOf="@+id/button_link_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hospitals" />

    <Button
        android:id="@+id/button_link_2"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#A6B5D370"
        android:text="@string/link2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_link_1" />

    <Button
        android:id="@+id/hospitals"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="#A41C4208"
        android:text="@string/hospital"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_link_1"
        app:layout_constraintEnd_toStartOf="@+id/testing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <Button
        android:id="@+id/testing"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="4dp"
        android:background="#A90A3305"
        android:text="@string/testingloc"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_link_1"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toRightOf="@id/hospitals"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintVertical_bias="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>